# haskell-imf

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  brittany.yaml  cabal.project  imf.cabal  requirements.txt  setup.py  stack.yaml
app/: Main.hs
haskell/src/Data/: IMF.hs
haskell/src/Data/IMF/: FFI.hs  Network.hs  Parsers.hs  Types.hs
haskell/src/Data/IMF/Network/: Chat.hs  Client.hs  ClientPool.hs  Connection.hs  Errors.hs  Server.hs
haskell/src/Data/IMF/Parsers/: Command.hs  Core.hs  DateTime.hs  Header.hs  Mailbox.hs  Message.hs  MsgId.hs  Network.hs
haskell/src/Text/: IMF.hs
haskell/src/Text/IMF/: DateTime.hs  FFI.hs  Format.hs  Header.hs  Mailbox.hs  Message.hs  MsgId.hs  Network.hs  Primatives.hs
haskell/src/Text/IMF/Network/: Client.hs  ClientPool.hs  Connection.hs  Errors.hs
haskell/src/Text/IMF/Parsers/: Client.hs
haskell/test/: Spec.hs
haskell/test/Data/IMF/Network/: ClientSpec.hs  ServerSpec.hs
haskell/test/Data/IMF/Parsers/: CoreSpec.hs  DateTimeSpec.hs  HeaderSpec.hs  MailboxSpec.hs  MessageSpec.hs  MsgIdSpec.hs
haskell/test/Text/IMF/: HeaderSpec.hs  MailboxSpec.hs  MessageSpec.hs  NetworkSpec.hs
imf/: README.md  imf.cabal
imf-network/: README.md  imf-network.cabal
imf-network/src/Data/IMF/: Network.hs
imf-network/src/Data/IMF/Network/: Chat.hs  Client.hs  Command.hs  Connection.hs  DNS.hs  Errors.hs  Parsers.hs  Server.hs
imf-network/test/: test.hs
imf-network/test/Fixtures/: localhost.crt  localhost.key
imf-network/test/Test/: Client.hs  Server.hs
imf-parsers/: LICENSE  README.md  imf-parsers.cabal
imf-parsers/src/Data/IMF/: Parsers.hs
imf-parsers/src/Data/IMF/Parsers/: Command.hs  Core.hs  Header.hs  Mailbox.hs  Message.hs  MessageId.hs  Network.hs  Time.hs  Types.hs
imf-parsers/test/: test.hs
imf-parsers/test/Test/: Core.hs  Header.hs  Mailbox.hs  Message.hs  MessageId.hs  Time.hs
imf/src/Data/: IMF.hs
imf/src/Data/IMF/: Command.hs  Header.hs  Mailbox.hs  Message.hs  MessageId.hs  Time.hs  Types.hs
imf/test/: test.hs
mailbin/: README.md  mailbin.cabal
mailbin/app/: Main.hs
mailbin/src/MailBin/: API.hs  Config.hs  DB.hs  MTA.hs
python/: .gitignore
python/imf/: __init__.py  _imf_build.py
python/tests/: imf_test.py
src/Text/: IMF.hs
src/Text/IMF/: Combinator.hs  DateTime.hs  Format.hs  Header.hs  Mailbox.hs  Message.hs  MsgId.hs  Primatives.hs
test/: Spec.hs
test/Text/IMF/: HeaderSpec.hs  MailboxSpec.hs  MessageSpec.hs
