name:                imf
version:             0.4.0
synopsis:            Utilities for parsing and manipulating internet messages
homepage:            https://github.com/b0d0nne11/imf
bug-reports:         https://github.com/b0d0nne11/imf/issues
license:             Apache
license-file:        LICENSE
author:              Brendan O'Donnell <brendan.james.odonnell@gmail.com>
maintainer:          Brendan O'Donnell <brendan.james.odonnell@gmail.com>
copyright:           2018 Brendan O'Donnell
category:            Parsing
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      haskell/src
  exposed-modules:     Text.IMF
                     , Text.IMF.DateTime
                     , Text.IMF.Header
                     , Text.IMF.Mailbox
                     , Text.IMF.Message
                     , Text.IMF.MsgId
                     , Text.IMF.Primatives
                     , Text.IMF.Format
                     , Text.IMF.FFI
                     , Text.IMF.Network
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , time
                     , safe
                     , network
                     , dns
                     , bytestring
                     , mtl
                     , attoparsec
  ghc-options:
  default-language:    Haskell2010

test-suite imf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      haskell/test
  main-is:             Spec.hs
  other-modules:       Text.IMF.HeaderSpec
                     , Text.IMF.MailboxSpec
                     , Text.IMF.MessageSpec
                     , Text.IMF.NetworkSpec
  build-depends:       base
                     , imf
                     , hspec
                     , hspec-contrib
                     , directory
                     , filepath
                     , network
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/b0d0nne11/imf
