name:                imf-network
version:             0.7.0
synopsis:            Utilities for sending and receiving email messages
homepage:            https://github.com/b0d0nne11/imf
bug-reports:         https://github.com/b0d0nne11/imf/issues
license:             OtherLicense
license-file:        LICENSE
author:              Brendan O'Donnell
maintainer:          brendan@odonnell.xyz
copyright:           Copyright (c) 2017-2021, Brendan O'Donnell
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.IMF.Network
                     , Data.IMF.Network.Client
                     , Data.IMF.Network.Command
                     , Data.IMF.Network.Connection
                     , Data.IMF.Network.Errors
                     , Data.IMF.Network.Server
  build-depends:       base >= 4.14 && < 5
                     , imf
                     , imf-parsers
                     , attoparsec
                     , base64
                     , bytestring
                     , data-default-class
                     , dns
                     , monad-logger
                     , monad-loops
                     , MonadRandom
                     , mtl
                     , network
                     , random-shuffle
                     , safe-exceptions
                     , text
                     , time
                     , tls
                     , x509-system
                     , x509-store
  ghc-options:
  default-language:    Haskell2010

test-suite imf-network-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:       Test.Client
                     , Test.Server
  build-depends:       base
                     , imf
                     , imf-parsers
                     , imf-network
                     , bytestring
                     , monad-logger
                     , monad-loops
                     , mtl
                     , safe-exceptions
                     , stm
                     , tasty
                     , tasty-hunit
                     , text
                     , tls
  ghc-options:
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/b0d0nne11/imf
