name:                imf-parsers
version:             0.7.0
synopsis:            Utilities for parsing email messages
homepage:            https://github.com/b0d0nne11/imf
bug-reports:         https://github.com/b0d0nne11/imf/issues
license:             OtherLicense
license-file:        LICENSE
author:              Brendan O'Donnell
maintainer:          brendan@odonnell.xyz
copyright:           Copyright (c) 2017-2021, Brendan O'Donnell
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.IMF.Parsers
                     , Data.IMF.Parsers.Core
                     , Data.IMF.Parsers.Header
                     , Data.IMF.Parsers.Mailbox
                     , Data.IMF.Parsers.Message
                     , Data.IMF.Parsers.MessageId
                     , Data.IMF.Parsers.Time
                     , Data.IMF.Parsers.Types
  build-depends:       base >= 4.14 && < 5
                     , imf
                     , attoparsec
                     , bytestring
                     , text
                     , time
  ghc-options:
  default-language:    Haskell2010

test-suite imf-parsers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:       Test.Core
                     , Test.Header
                     , Test.Mailbox
                     , Test.MessageId
                     , Test.Message
                     , Test.Time
  build-depends:       base
                     , imf
                     , imf-parsers
                     , tasty
                     , tasty-hunit
                     , attoparsec
                     , directory
                     , filepath
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/b0d0nne11/imf
