name:                mailbin
version:             0.1.0
synopsis:            Utility to simplify testing of smtp clients
homepage:            https://github.com/b0d0nne11/imf
bug-reports:         https://github.com/b0d0nne11/imf/issues
license:             BSD3
license-file:        LICENSE
author:              Brendan O'Donnell
maintainer:          brendan@odonnell.xyz
copyright:           Copyright (c) 2017-2020, Brendan O'Donnell
category:            Application, Utils
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     MailBin.API
                     , MailBin.Config
                     , MailBin.DB
                     , MailBin.MTA
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , configurator
                     , fast-logger
                     , http-media
                     , http-types
                     , imf
                     , imf-network
                     , imf-parsers
                     , mtl
                     , monad-loops
                     , network-bsd
                     , network-simple
                     , resource-pool
                     , servant-server
                     , sqlite-simple
                     , text
                     , time
                     , tls
                     , wai
                     , wai-extra
                     , warp
  ghc-options:
  default-language:    Haskell2010

executable mailbin
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , mailbin
                     , configurator
                     , fast-logger
                     , unix
  ghc-options:         -threaded -rtsopts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/b0d0nne11/imf
