name:                mailbin
version:             0.1.0
synopsis:            Utility to simplify testing of smtp clients
homepage:            https://github.com/b0d0nne11/imf
bug-reports:         https://github.com/b0d0nne11/imf/issues
license:             OtherLicense
license-file:        LICENSE
author:              Brendan O'Donnell
maintainer:          brendan@odonnell.xyz
copyright:           Copyright (c) 2017-2021, Brendan O'Donnell
category:            Application, Utils
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     MailBin.API
                     , MailBin.Config
                     , MailBin.DB
                     , MailBin.MTA
  build-depends:       base >= 4.14 && < 5
                     , aeson
                     , async
                     , bytestring
                     , configurator
                     , http-media
                     , http-types
                     , imf
                     , imf-network
                     , imf-parsers
                     , mtl
                     , monad-logger
                     , network-bsd
                     , network-simple
                     , resource-pool
                     , safe-exceptions
                     , servant-server
                     , sqlite-simple
                     , stm
                     , text
                     , time
                     , tls
                     , wai
                     , wai-extra
                     , warp
  ghc-options:
  default-language:    Haskell2010

executable mailbin
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.13 && < 5
                     , mailbin
                     , configurator
                     , monad-logger
                     , unix
  ghc-options:         -threaded -rtsopts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/b0d0nne11/imf
